--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-react": "^7.32.2",
     "react-scripts": "latest"
   },
   "browserslist": {
