--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -15,11 +17,7 @@
   "devDependencies": {
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "^8.42.0",
-    "eslint-plugin-react": "^7.32.2",
-    "react-scripts": "latest"
+    "react-scripts": "^4"
   },
   "browserslist": {
     "production": [
