--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "baseUrl": "./src",
     "paths": {
       "api/*": ["./api/*"],
-      "types/*": ["./types/*"],
+      "types/*": ["./types/*"]
     }
   },
   "include": ["src"]
