--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "react-scripts": "^4"
+    "react-scripts": "^4",
+    "react-error-overlay": "6.0.9"
   },
   "browserslist": {
     "production": [
