--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "react-scripts": "^4",
-    "react-error-overlay": "6.0.9"
+    "react-error-overlay": "6.0.9",
+    "react-scripts": "^4"
   },
   "browserslist": {
     "production": [
