--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react",
   "version": "0.0.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.1.4",
@@ -10,7 +11,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -18,8 +19,14 @@
     "@types/jest": "^29.5.2",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "husky": "^8.0.3",
     "react-error-overlay": "6.0.9",
     "react-scripts": "^4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
   },
   "browserslist": {
     "production": [
