--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "react",
   "version": "0.0.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://dmorenogogoleva.github.io/weather-app/",
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.1.4",
+    "gh-pages": "^5.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
@@ -13,7 +14,9 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
