--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,11 @@
       "sizes": "144x144 64x64 32x32 24x24 16x16",
       "type": "image/x-icon",
       "purpose": "any maskable"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/x-icon"
     }
   ]
 }
