--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
     {
       "src": "favicon.png",
       "sizes": "144x144 64x64 32x32 24x24 16x16",
-      "type": "image/x-icon",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
       "src": "android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ]
 }
